# bluelog

./: .gitignore  README.md  pyproject.toml
src/bluelog/: __init__.py  core.py
