[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bluelog"
version = "0.1.0"
authors = [
    { name = "Angel Mariscurrena" }
]
description = "Logging light weight python extension using ANSI Colors and SUCCESS level"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = []

[project.urls]
Repository = "https://github.com/Mariscurrena/bluelog.git"

[tool.setuptools.packages.find]
where = ["src"]